# adapta-backgrounds

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  meson.build
backgrounds/: Makefile.am  adapta-backgrounds.xml.in  meson.build
